--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "useDefineForClassFields": true,
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
-    "skipLibCheck": true,
+    "esModuleInterop": true, 
+    "skipLibCheck": true, 
 
     /* Bundler mode */
     "moduleResolution": "bundler",
