--- a/package.json
+++ b/package.json
@@ -11,16 +11,23 @@
   },
   "dependencies": {
     "@types/styled-components": "^5.1.34",
+    "axios": "^1.6.7",
+    "bootstrap": "^5.3.2",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "6.4",
+    "react-modal": "^3.16.1",
+    "react-router-dom": "^6.21.3",
     "react-toastify": "^10.0.4",
-    "styled-components": "^6.1.8"
+    "styled-components": "^6.1.8",
+    "ts-loader": "^9.5.1",
+    "webpack": "^5.90.0",
+    "webpack-cli": "^5.1.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "@types/react-modal": "^3.16.3",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
