--- a/package.json
+++ b/package.json
@@ -10,25 +10,25 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/jwt-decode": "^3.1.0",
+    "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.34",
     "axios": "^1.6.7",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-modal": "^3.16.1",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.21.3",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.4",
     "styled-components": "^6.1.8",
     "ts-loader": "^9.5.1",
     "webpack": "^5.90.0",
-    "webpack-cli": "^5.1.4",
-    "@types/jwt-decode": "^3.1.0",
-    "@types/react-router-dom": "^5.3.3",
-    "jwt-decode": "^4.0.0",
-    "react-icons": "^5.0.1",
-    "react-query": "^3.39.3",
-    "react-spinners": "^0.13.8"
+    "webpack-cli": "^5.1.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
