--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/jwt-decode": "^3.1.0",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.34",
+    "antd": "^5.14.0",
     "axios": "^1.6.7",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
